kubernetes/orion/manifests/default/jellyfin/jellyfin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-ingress
  hostnames:
  - "jellyfin.bou1der.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfin-service
      port: 80
